// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoLoaderScreen custom webpack config renders correctly 1`] = `
<div
  className="root"
>
  <div
    className="inner"
  >
    <img
      src={Object {}}
    />
    <div>
      <p
        className="header"
      >
        Almost there...
      </p>
      <p>
        It looks like you're using a custom webpack config that isn't outputting an 
        <code>
          index.html
        </code>
      </p>
      <p>
        <strong>
          Add
           
          <a
            href="https://github.com/jantimon/html-webpack-plugin"
            target="_blank"
          >
            html-webpack-plugin
          </a>
           
          to your webpack config
        </strong>
         
        and restart Cosmos.
      </p>
      <p>
        If that doesn't work please
         
        <a
          href="https://github.com/react-cosmos/react-cosmos/blob/master/CONTRIBUTING.md"
          target="_blank"
        >
          create an issue
        </a>
         
        describing your setup.
      </p>
    </div>
  </div>
</div>
`;

exports[`NoLoaderScreen default webpack config renders correctly 1`] = `
<div
  className="root"
>
  <div
    className="inner"
  >
    <img
      src={Object {}}
    />
    <div>
      <p
        className="header"
      >
        Almost there...
      </p>
      <p>
        <strong>
          Install 
          <code>
            html-webpack-plugin
          </code>
           in your dev dependencies
        </strong>
         
        and restart Cosmos.
      </p>
      <p>
        The default webpack config will include it automatically.
      </p>
      <p>
        If that doesn't work please
         
        <a
          href="https://github.com/react-cosmos/react-cosmos/blob/master/CONTRIBUTING.md"
          target="_blank"
        >
          create an issue
        </a>
         
        describing your setup.
      </p>
    </div>
  </div>
</div>
`;
